# numerical_pdes

./: .gitignore  LICENSE  README.md  plotday.md
HW0/: README.md  generate_plots.sh  problem1_1.py  problem1_2.py  problem2_1.py  problem2_2.py  problem3_1.py  problem3_2.py  problem4_1.py  problem4_1_2.py  problem4_2.py  problem4_3.py  pyproject.toml
HW1_ImmersedBoundaries/: README.md  generate_plots.sh  problem1_1.py  problem1_2.py  problem2_1.py  problem2_2.py  problem3_1.py  problem4.py  pyproject.toml
HW2/: README.md  compare_methods.py  compare_ordered_methods.py  problem1_BDF2.py  problem1_BackwardEuler.py  problem1_CrankNicolson.py  problem1_ForwardEuler.py  problem1_ODE45.py  problem1_RK2.py  problem2.py  pyproject.toml
HW3/: README.md  problem1.py  problem2.py  problem3.py  pyproject.toml
HW4/: problem1.py  problem2.py  pyproject.toml
